--- a/HW1/source/Makefile
+++ b/HW1/source/Makefile
@@ -2,5 +2,11 @@ MODULES = tcp
 
 all: 
 	for dir in $(MODULES); do \
-		(cd $$dir; ${MAKE} all); \
+		(cd $$dir; ${MAKE} CFLAGS="$(CFLAGS)" all); \
 	done
+
+clean: 
+	for dir in $(MODULES); do \
+		(cd $$dir; rm *.o); \
+	done
+
