--- a/HW1/source/Makefile
+++ b/HW1/source/Makefile
@@ -1,12 +1,19 @@
-MODULES = tcp
+MODULES = tcp utils
+INC = -I./include
+CC = gcc
 
-all: 
+all: main.o
 	for dir in $(MODULES); do \
 		(cd $$dir; ${MAKE} CFLAGS="$(CFLAGS)" all); \
 	done
+	$(CC) -o ../hw1 main.o ./tcp/*.o ./utils/*.o  $(INC) $(CFLAGS)
+
+.c.o:
+	$(CC) -c $< $(INC) $(CFLAGS)
 
 clean: 
 	for dir in $(MODULES); do \
 		(cd $$dir; rm *.o); \
 	done
+	rm *.o
 
