--- a/HW1/source/Makefile
+++ b/HW1/source/Makefile
@@ -1,4 +1,4 @@
-MODULES = tcp utils
+MODULES = tcp udp utils
 INC = -I./include
 CC = gcc
 
@@ -6,7 +6,7 @@ all: main.o
 	for dir in $(MODULES); do \
 		(cd $$dir; ${MAKE} CFLAGS="$(CFLAGS)" all); \
 	done
-	$(CC) -o ../hw1 main.o ./tcp/*.o ./utils/*.o  $(INC) $(CFLAGS)
+	$(CC) -o ../hw1 main.o ./tcp/*.o ./utils/*.o ./udp/*.o  $(INC) $(CFLAGS)
 
 .c.o:
 	$(CC) -c $< $(INC) $(CFLAGS)
@@ -15,6 +15,6 @@ clean:
 	for dir in $(MODULES); do \
 		(cd $$dir; rm *.o); \
 	done
-	rm *.o
+	rm ./*.o
 	rm ../hw1
 
