fix bug in valid_path

--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -3,7 +3,7 @@ CC = gcc
 all: sandbox.so sandbox
 
 sandbox:
-	$(CC) main.c  -o sandbox $(CFLAGS) -ldl
+	$(CC) main.c  -o sandbox $(CFLAGS)  
 sandbox.so:
 	$(CC) ./lib/sandbox.c  -shared  -fPIC  -o sandbox.so -ldl $(CFLAGS) 
 
